@@ -1,3 +1,5 @@
+* Support ref value for reference field
+* Enforce ref model in XML data
 * Do not resolve entities by default with lxml (issue11219)
 * Use defusedxml to parse XML (issue11244)
 * Use dictionary as search_order on Reference field
